trunk/Archive2/bb/90016f10b22189/output
main.cpp: In function 'int main()':
main.cpp:9:34: error: 'get_student' was not declared in this scope
     auto student0 = get_student(0);
                                  ^
